--- a/pages/index.css
+++ b/pages/index.css
@@ -1,20 +1,21 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/Fonts/InterWeb/inter.css);
 
-img {
+/*img {
     border: 1px solid red;
     height: 30px;
     width: 30px;
 }
 
-div, a, p, h1, h2, section {
+div, a, p, h1, h2, section, article {
     border: 1px solid blue;
-}
+}*/
 
 .page {
     max-width: 1024px;
     min-height: 6895px;
     background-color: #2a2c2f;
+    padding: 28px 0;
     margin: auto;
     font-family: 'Inter', sans-serif;
 }
@@ -22,7 +23,7 @@ div, a, p, h1, h2, section {
 .header {
     max-width: 928px;
     min-height: 52px;
-    margin: 28px auto 48px;
+    margin: 0 auto 48px;
     color: #fff;
     display: flex;    
 }
@@ -48,6 +49,7 @@ div, a, p, h1, h2, section {
 .content {
   width: 928px;
   margin: auto;
+  box-sizing: border-box;
 }
 
 .lead {
@@ -63,7 +65,7 @@ div, a, p, h1, h2, section {
   font-weight: bold;
   line-height: 100px;
   text-align: center;
-    margin: auto;
+  margin: auto;
 }
 
 .lead__subtitle {
@@ -84,6 +86,7 @@ div, a, p, h1, h2, section {
 .lead__caption {
   font-size: 10px;
   line-height: 14px;
+  letter-spacing: 1.5px;
   margin-top: 8px;
 }
 
@@ -91,11 +94,182 @@ div, a, p, h1, h2, section {
   width: 690px;
   height: 429px;
   color: #fff;
-
+  margin: 92px 0
 }
 
-/*.intro__title {}
+.intro__title {
+  margin: 0;
+  font-size: 54px;
+  font-weight: bold;
+  line-height: 58px;
+}
 
-.intro__text {}
+.intro__text {
+  font-size: 16px;
+  line-height: 26.08px;
+  font-weight: normal;
+  margin-top: 40px;
+}
 
-.intro__list {}*/
+.intro__list {
+  margin-top: 33px;
+  margin-bottom: 0;
+  list-style: none;
+  padding: 0;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
+}
+
+.photo-grid {
+  margin: auto;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 14px;  
+}
+
+.photo-grid__item {
+  width: 300px;
+  height: 225px;
+}
+
+.places {
+  width: 100%;
+  margin: 92px auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  color: #fff;
+}
+
+.place {
+  width: 100%;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(2, 450px);
+  grid-template-rows: repeat(2, min-content);
+  grid-gap: 48px 32px;
+  grid-auto-rows: minmax(min-content, max-content);   
+  margin-bottom: 80px;
+}
+
+.place:last-child {
+  margin-bottom: 0;
+}
+
+.place__title {
+  margin: 0;
+  font-size: 72px;
+  line-height: 76px;
+  font-weight: bold;
+}
+
+.place__image {
+  grid-column: 1;
+  grid-row: 2/3;
+  width: 440px;
+  height: 440px;
+  margin: 0;  
+}
+
+.place__website {
+  display: flex;  
+  flex-direction: column;
+  justify-content: end;
+}
+
+.place__website_url-heading {
+  margin: 0;
+  padding-bottom: 12px;
+  font-size: 12px;
+  line-height: 12px;
+  color: #aaa;
+}
+
+.place__website_link {
+  color: #fff;
+  font-size: 18px;
+  line-height: 22px;  
+}
+
+.place__website_link:hover {
+  text-decoration: underline;
+}
+
+.place__paragraph {
+  font-size: 18px; 
+  line-height: 29.34px;
+  margin: 0;  
+}  
+
+.place__paragraph:last-child {
+  margin-top: 27px;
+}
+
+.cover {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+    
+}
+
+.cover__background {
+  width: 100%;
+  min-height: 640px;
+  background-image: url(../images/cover-trains.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;  
+  opacity: .8; 
+}
+
+.cover__background:hover {
+  opacity: 0.3;
+  transition: opacity .4s;
+  }
+
+.cover__title {
+  font-size: 72px;
+  font-weight: bold;
+  line-height: 76px;
+  text-align: center;
+  margin: 0 auto 32px;
+  width: 55%;
+  position: absolute;
+  top: 195px;
+  left: 235px;  
+}
+
+.cover__subtitle {
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  margin: 0 auto;
+  width: 40%;
+  position: absolute;
+  bottom: 195px;
+  left: 332px;
+}
+
+.footer {
+  margin: 92px 24px 48px 116px;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.footer__link {
+  font-size: 16px;
+  line-height: 18px;
+  color: #fff;
+  text-decoration: none;
+  margin-right: 18px;
+}
+
+.footer__copyright {
+  margin-left: auto;  
+}
