--- a/pages/index.css
+++ b/pages/index.css
@@ -12,42 +12,44 @@ div, a, p, h1, h2, section, article {
 }*/
 
 .page {
-    max-width: 1024px;
-    min-height: 6895px;
-    background-color: #2a2c2f;
-    padding: 28px 0;
-    margin: auto;
-    font-family: 'Inter', sans-serif;
+  max-width: 100vw;
+  min-height: 6895px;
+  background-color: #2a2c2f;
+  padding: 28px 0;
+  margin: auto;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;  
+
 }
 
 .header {
-    max-width: 928px;
-    min-height: 52px;
-    margin: 0 auto 48px;
-    color: #fff;
-    display: flex;    
+  max-width: 928px;
+  min-height: 52px;
+  margin: 0 auto 48px;
+  color: #fff;
+  display: flex;    
 }
 
 .header__logo {
-    width: 176px;
-    height: 52px;
-    margin-right: auto;
+  width: 176px;
+  height: 52px;
+  margin-right: auto;
 }
 
 .header__lang-link {
-    font-size: 24px;
-    line-height: 28px;
-    color: #fff;
-    text-decoration: none;
-    padding: 9px;    
+  font-size: 1.5em;
+  line-height: 28px;
+  color: #fff;
+  text-decoration: none;
+  padding: 9px;    
 }
 
 .header__lang-link:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .content {
-  width: 928px;
+  max-width: 928px;
   margin: auto;
   box-sizing: border-box;
 }
@@ -60,53 +62,53 @@ div, a, p, h1, h2, section, article {
 }
 
 .lead__title {
-  width: 720px;
-  font-size: 96px;
+  width: 78%;
+  font-size: 6em;
   font-weight: bold;
-  line-height: 100px;
+  line-height: 1;
   text-align: center;
   margin: auto;
 }
 
 .lead__subtitle {
   margin: 32px auto 56px;
-  width: 640px;
+  width: 69%;
   text-align: center;
-  font-size: 30px;
+  font-size: 1.9em;
   font-weight: normal;
-  line-height: 36px;
+  line-height: 1.2;
 
 }   
 
 .lead__image {
   width: 100%;
-  height: 580px;
+  height: 63%;
 }
 
 .lead__caption {
-  font-size: 10px;
-  line-height: 14px;
+  font-size: .6em;
+  line-height: .7;
   letter-spacing: 1.5px;
   margin-top: 8px;
 }
 
 .intro {
-  width: 690px;
-  height: 429px;
+  max-width: 690px;
+  min-height: 429px;
   color: #fff;
   margin: 92px 0
 }
 
 .intro__title {
   margin: 0;
-  font-size: 54px;
+  font-size: 3.4em;
   font-weight: bold;
-  line-height: 58px;
+  line-height: 1;
 }
 
 .intro__text {
-  font-size: 16px;
-  line-height: 26.08px;
+  font-size: 1em;
+  line-height: 1.6;
   font-weight: normal;
   margin-top: 40px;
 }
@@ -116,8 +118,8 @@ div, a, p, h1, h2, section, article {
   margin-bottom: 0;
   list-style: none;
   padding: 0;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: .7em;
+  line-height: 1.6;
   font-weight: normal;
 }
 
@@ -125,15 +127,18 @@ div, a, p, h1, h2, section, article {
   margin: auto;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
-  grid-gap: 14px;  
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(auto-fit, auto);
+  grid-auto-rows: auto;
+  grid-gap: 14px;
+  grid-auto-flow: row;
+
 }
 
 .photo-grid__item {
-  width: 300px;
-  height: 225px;
+  max-width: 300px;
+  max-height: 225px;
+  
 }
 
 .places {
@@ -152,7 +157,7 @@ div, a, p, h1, h2, section, article {
   grid-template-columns: repeat(2, 450px);
   grid-template-rows: repeat(2, min-content);
   grid-gap: 48px 32px;
-  grid-auto-rows: minmax(min-content, max-content);   
+  grid-auto-rows: minmax(min-content, max-content);  
   margin-bottom: 80px;
 }
 
@@ -162,8 +167,8 @@ div, a, p, h1, h2, section, article {
 
 .place__title {
   margin: 0;
-  font-size: 72px;
-  line-height: 76px;
+  font-size: 4.5em;
+  line-height: 1;
   font-weight: bold;
 }
 
@@ -184,15 +189,15 @@ div, a, p, h1, h2, section, article {
 .place__website_url-heading {
   margin: 0;
   padding-bottom: 12px;
-  font-size: 12px;
-  line-height: 12px;
+  font-size: .7em;
+  line-height: .9;
   color: #aaa;
 }
 
 .place__website_link {
   color: #fff;
-  font-size: 18px;
-  line-height: 22px;  
+  font-size: 1.1em;
+  line-height: .8;  
 }
 
 .place__website_link:hover {
@@ -200,8 +205,8 @@ div, a, p, h1, h2, section, article {
 }
 
 .place__paragraph {
-  font-size: 18px; 
-  line-height: 29.34px;
+  font-size: 1.1em; 
+  line-height: 1.6;
   margin: 0;  
 }  
 
@@ -210,6 +215,7 @@ div, a, p, h1, h2, section, article {
 }
 
 .cover {
+  width: 100%;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -219,11 +225,11 @@ div, a, p, h1, h2, section, article {
 }
 
 .cover__background {
-  width: 100%;
   min-height: 640px;
   background-image: url(../images/cover-trains.jpg);
   background-repeat: no-repeat;
-  background-size: contain;  
+  background-size: contain; 
+  background-position: center; 
   opacity: .8; 
 }
 
@@ -233,26 +239,26 @@ div, a, p, h1, h2, section, article {
   }
 
 .cover__title {
-  font-size: 72px;
+  font-size: 4.5em;
   font-weight: bold;
-  line-height: 76px;
+  line-height: 1;
   text-align: center;
   margin: 0 auto 32px;
   width: 55%;
   position: absolute;
-  top: 195px;
-  left: 235px;  
+  top: 30%;
+  left: 25%;  
 }
 
 .cover__subtitle {
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 1.1em;
+  line-height: 1.2;
   text-align: center;
   margin: 0 auto;
   width: 40%;
   position: absolute;
-  bottom: 195px;
-  left: 332px;
+  bottom: 30%;
+  left: 30%;
 }
 
 .footer {
@@ -260,11 +266,12 @@ div, a, p, h1, h2, section, article {
   display: flex;
   justify-content: space-between;
   color: #fff;
+  flex-wrap: wrap;
 }
 
 .footer__link {
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 1em;
+  line-height: 1.1;
   color: #fff;
   text-decoration: none;
   margin-right: 18px;
