--- a/pages/index.css
+++ b/pages/index.css
@@ -15,19 +15,20 @@ div, a, p, h1, h2, section, article {
   max-width: 100vw;
   min-height: 6895px;
   background-color: #2a2c2f;
-  padding: 28px 0;
-  margin: auto;
+  padding: 0;
+  margin: 0 auto;
   font-family: 'Inter', sans-serif;
   font-size: 16px;  
 
 }
 
 .header {
-  max-width: 928px;
+  max-width: calc(100% - 96px);
   min-height: 52px;
-  margin: 0 auto 48px;
+  margin: 28px auto 48px;
   color: #fff;
-  display: flex;    
+  display: flex;
+
 }
 
 .header__logo {
@@ -49,9 +50,11 @@ div, a, p, h1, h2, section, article {
 }
 
 .content {
-  max-width: 928px;
+  max-width: calc(100% - 96px);
   margin: auto;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .lead {
@@ -124,20 +127,19 @@ div, a, p, h1, h2, section, article {
 }
 
 .photo-grid {
-  margin: auto;
+  margin: auto;  
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(auto-fit, auto);
-  grid-auto-rows: auto;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-template-rows: repeat(3, 225px);
   grid-gap: 14px;
+  /*grid-auto-rows: auto;*/
   grid-auto-flow: row;
-
+  justify-items: center;
 }
 
 .photo-grid__item {
-  max-width: 300px;
-  max-height: 225px;
+  object-fit: cover;
   
 }
 
@@ -152,11 +154,11 @@ div, a, p, h1, h2, section, article {
 
 .place {
   width: 100%;
-  box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(2, 450px);
+  grid-template-columns: repeat(auto-fill, minmax(288px, 460px));
   grid-template-rows: repeat(2, min-content);
   grid-gap: 48px 32px;
+  grid-auto-flow: row;
   grid-auto-rows: minmax(min-content, max-content);  
   margin-bottom: 80px;
 }
@@ -175,8 +177,8 @@ div, a, p, h1, h2, section, article {
 .place__image {
   grid-column: 1;
   grid-row: 2/3;
-  width: 440px;
-  height: 440px;
+  max-width: 460px;
+  max-height: 460px;
   margin: 0;  
 }
 
@@ -216,10 +218,13 @@ div, a, p, h1, h2, section, article {
 
 .cover {
   width: 100%;
+  max-width: 1184px;
+  margin: auto;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;  
   position: relative;
     
 }
@@ -262,7 +267,8 @@ div, a, p, h1, h2, section, article {
 }
 
 .footer {
-  margin: 92px 24px 48px 116px;
+  width: calc(100% - 96px);
+  margin: 92px auto 24px;
   display: flex;
   justify-content: space-between;
   color: #fff;
@@ -279,4 +285,32 @@ div, a, p, h1, h2, section, article {
 
 .footer__copyright {
   margin-left: auto;  
+}
+
+@media screen and (min-width 1280px) {
+  .content {
+    width: calc(100% - 296px);
+  }
+
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, 284px);
+    grid-template-rows: repeat(3, 213px);
+    grid-gap: 16px;
+  } 
+}
+
+@media screen and (min-width 768px max-width 1024px) {
+
+}
+
+@media screen and (min-width 320px max-width 768px) {
+  .content {
+    width: calc(100% - 32px);
+  }
+
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, 288px);
+    grid-template-rows: repeat(3, 216px);
+    grid-gap: 12px;
+  }   
 }
