--- a/pages/index.css
+++ b/pages/index.css
@@ -1,33 +1,21 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/Fonts/fonts.css);
 
-/*img {
-    border: 1px solid red;
-
-}
-
-div, a, p, h1, h2, section, article {
-    border: 1px solid blue;
-}*/
 
 .page {
-  max-width: 100vw;
-  min-height: 6895px;
+  max-width: 100vw;  
   background-color: #2a2c2f;
   padding: 0;
   margin: 0 auto;
   font-family: 'Inter', sans-serif;
   font-size: 16px;  
-
 }
 
 .header {
-  max-width: calc(100% - 96px);
-  min-height: 52px;
+  max-width: calc(100% - 96px);  
   margin: 28px auto 48px;
   color: #fff;
   display: flex;
-
 }
 
 .header__logo {
@@ -38,7 +26,7 @@ div, a, p, h1, h2, section, article {
 
 .header__lang-link {
   font-size: 1.5em;
-  line-height: 28px;
+  line-height: 1.2;
   color: #fff;
   text-decoration: none;
   padding: 9px;    
@@ -48,23 +36,17 @@ div, a, p, h1, h2, section, article {
   text-decoration: underline;
 }
 
-.content {
-  max-width: calc(100% - 96px);
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
 .lead {
-  min-height: 962px;
+  max-width: calc(100% - 96px);
+  margin: 48px auto 0;  
   color: #fff;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
+  justify-content: center;  
 }
 
 .lead__title {
-  width: 78%;
+  width: 720px;
   font-size: 6em;
   font-weight: bold;
   line-height: 1;
@@ -74,12 +56,11 @@ div, a, p, h1, h2, section, article {
 
 .lead__subtitle {
   margin: 32px auto 56px;
-  width: 69%;
+  width: 640px;
   text-align: center;
   font-size: 1.9em;
   font-weight: normal;
   line-height: 1.2;
-
 }   
 
 .lead__image {
@@ -98,7 +79,8 @@ div, a, p, h1, h2, section, article {
   max-width: 690px;
   min-height: 429px;
   color: #fff;
-  margin: 92px 0
+  margin-top: 92px;
+  margin-left: 48px;
 }
 
 .intro__title {
@@ -126,14 +108,13 @@ div, a, p, h1, h2, section, article {
 }
 
 .photo-grid {
-  margin: auto;  
-  width: 100%;
+  margin: 92px auto;  
+  width: calc(100% - 96px);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-template-rows: 1fr;
   grid-gap: 14px;
   grid-auto-flow: row;
-
 }
 
 .photo-grid__item {
@@ -143,18 +124,20 @@ div, a, p, h1, h2, section, article {
 }
 
 .places {
-  width: 100%;
-  margin: 92px auto;
+  width: calc(100% - 96px);
+  margin: auto;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  align-content: center;
   color: #fff;
 }
 
 .place {
   width: 100%;
+  max-width: 984px;  
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-template-rows: repeat(2, min-content);
   grid-gap: 48px 32px;
   grid-auto-flow: row;
@@ -176,8 +159,8 @@ div, a, p, h1, h2, section, article {
 .place__image {
   grid-column: 1;
   grid-row: 2/3;
-  max-width: 460px;
-  max-height: 460px;
+  max-width: 440px;
+  max-height: 440px;
   margin: 0;  
 }
 
@@ -218,14 +201,8 @@ div, a, p, h1, h2, section, article {
 .cover {
   width: 100%;
   max-width: 1184px;
-  margin: auto;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;  
-  position: relative;
-    
+  margin: 79px auto 105px;
+  position: relative;   
 }
 
 .cover__background {
@@ -233,45 +210,60 @@ div, a, p, h1, h2, section, article {
   background-image: url(../images/cover-trains.jpg);
   background-repeat: no-repeat;
   background-size: contain; 
-  background-position: center; 
-  opacity: .8; 
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center; 
+  text-decoration: none;   
 }
 
-.cover__background:hover {
-  opacity: 0.3;
+.cover__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2a2c2f;
+  opacity: .2;
+  z-index: 1;
+}
+
+.cover__overlay:hover {
+  opacity: .5;
   transition: opacity .4s;
-  }
+}
 
 .cover__title {
+  color: #fff;
+  text-decoration: none;  
   font-size: 4.5em;
   font-weight: bold;
   line-height: 1;
   text-align: center;
   margin: 0 auto 32px;
-  width: 55%;
-  position: absolute;
-  top: 30%;
-  left: 25%;  
+  width: 560px;
+  z-index: 2;
 }
 
 .cover__subtitle {
+  color: #fff;
+  text-decoration: none;
   font-size: 1.1em;
   line-height: 1.2;
   text-align: center;
   margin: 0 auto;
-  width: 40%;
-  position: absolute;
-  bottom: 30%;
-  left: 30%;
+  width: 360px;
+  z-index: 2;  
 }
 
 .footer {
   width: calc(100% - 96px);
   margin: 92px auto 24px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  color: #fff;
-  flex-wrap: wrap;
+  color: #fff;  
 }
 
 .footer__link {
@@ -283,37 +275,194 @@ div, a, p, h1, h2, section, article {
 }
 
 .footer__copyright {
-  margin-left: auto;  
+  margin-left: auto;
 }
 
-/*@media screen and (min-width 1280px) {
-  .content {
+@media screen and (min-width: 1056px) {
+  .lead {
     width: calc(100% - 296px);
-  }
-*/
-/*  .photo-grid {
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 16px;
-  } 
-}
-/*
-@media screen and (min-width 768px max-width 1024px) {
-
-}
-*//*
-@media screen and (min-width 350px max-width 750px) {
-  .page {
-    font-size: 10px;
+    
   }
 
-  .content {
-    width: calc(100% - 32px);
+  .intro {
+    margin-left: 148px;
   }
 
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 288px);
-    grid-template-rows: repeat(3, 216px);
+    width: calc(100% - 96px);
+  }
+
+  .photo-grid__item {
+    width: 284px;
+    height: 213px;
+  }
+
+  .place {    
+    grid-template-columns: repeat(2, 1fr);    
+  }
+
+  .place__image {
+    width: 460px;
+    height: 460px;
+  } 
+  
+  .cover {
+    margin: 92px auto;
+  }
+  
+  .cover__background {
+    height: 740px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead {
+    max-width: 100%;
+    margin: 48px 0 0;
+  }
+
+  .intro {
+    margin: 88px 24px;
+  }
+  
+  .photo-grid {
+    width: calc(100% - 48px);
+    grid-gap: 16px;
+  }
+
+  .photo-grid__item {
+    width: 352px;
+    height: 264px;
+  }
+
+  .places {
+    width: calc(100% - 48px);
+    margin: 88px auto 90px;
+  }
+
+  .place__image {
+    width: 340px;
+    height: 340px;
+  }
+
+  .cover__background {
+    min-height: 480px;    
+  }
+
+  .footer {
+    width: calc(100% - 48px);
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header {
+    max-width: calc(100% - 32px);    
+    margin: 16px auto 48px;
+  }
+
+  .lead {
+    max-width: calc(100% - 4px);
+
+  }
+
+  .lead__title {
+    width: 288px;
+    font-size: 40px;
+  }
+
+  .lead__subtitle {
+    width: 288px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .intro {
+    width: calc(100% - 32px);
+    margin: 64px auto;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 1;
+  }
+
+  .photo-grid {
+    width: calc(100% - 32px);
     grid-gap: 12px;
-  }   
-}*/
+  }
+
+  .photo-grid__item {
+    width: 288px;
+    height: 216px;
+  }
+
+  .places {
+    width: 100%;
+  }
+
+  .place {   
+    grid-gap: 32px;  
+  }
+
+  .place__title {
+    font-size: 32px;
+    line-height: 1;
+    margin: 0 16px;
+    grid-row: 1;
+  }
+
+  .place__website {
+    margin: 0 16px;
+    grid-row: 2;
+  }
+
+  .place__image {
+    width: 320px;
+    height: 320px;
+    grid-row: 3;    
+  }
+
+  .place__paragraph {
+    margin: 32px 16px 50px;
+  }
+
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    width: 288px;
+  }
+
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    width: 288px;    
+  }
+
+  .cover {
+    margin: 16px 0 64px;
+  }
+
+  .cover__background {
+    min-height: 200px;
+    
+  }
+
+  .footer {
+    min-width: 186px;
+    min-height: 310px;
+    margin: 0 16px 24px;
+    flex-direction: column;
+    align-content: space-between;
+  }
+
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
+
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+    margin: 0;
+  }
+}
