--- a/pages/index.css
+++ b/pages/index.css
@@ -1,468 +1,37 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/Fonts/fonts.css);
-
-
-.page {
-  max-width: 100vw;  
-  background-color: #2a2c2f;
-  padding: 0;
-  margin: 0 auto;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;  
-}
-
-.header {
-  max-width: calc(100% - 96px);  
-  margin: 28px auto 48px;
-  color: #fff;
-  display: flex;
-}
-
-.header__logo {
-  width: 176px;
-  height: 52px;
-  margin-right: auto;
-}
-
-.header__lang-link {
-  font-size: 1.5em;
-  line-height: 1.2;
-  color: #fff;
-  text-decoration: none;
-  padding: 9px;    
-}
-
-.header__lang-link:hover {
-  text-decoration: underline;
-}
-
-.lead {
-  max-width: calc(100% - 96px);
-  margin: 48px auto 0;  
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;  
-}
-
-.lead__title {
-  width: 720px;
-  font-size: 6em;
-  font-weight: bold;
-  line-height: 1;
-  text-align: center;
-  margin: auto;
-}
-
-.lead__subtitle {
-  margin: 32px auto 56px;
-  width: 640px;
-  text-align: center;
-  font-size: 1.9em;
-  font-weight: normal;
-  line-height: 1.2;
-}   
-
-.lead__image {
-  width: 100%;
-  height: 63%;
-}
-
-.lead__caption {
-  font-size: .6em;
-  line-height: .7;
-  letter-spacing: 1.5px;
-  margin-top: 8px;
-}
-
-.intro {
-  max-width: 690px;
-  min-height: 429px;
-  color: #fff;
-  margin-top: 92px;
-  margin-left: 48px;
-}
-
-.intro__title {
-  margin: 0;
-  font-size: 3.4em;
-  font-weight: bold;
-  line-height: 1;
-}
-
-.intro__text {
-  font-size: 1em;
-  line-height: 1.6;
-  font-weight: normal;
-  margin-top: 40px;
-}
-
-.intro__list {
-  margin-top: 33px;
-  margin-bottom: 0;
-  list-style: none;
-  padding: 0;
-  font-size: .7em;
-  line-height: 1.6;
-  font-weight: normal;
-}
-
-.photo-grid {
-  margin: 92px auto;  
-  width: calc(100% - 96px);
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-template-rows: 1fr;
-  grid-gap: 14px;
-  grid-auto-flow: row;
-}
-
-.photo-grid__item {
-  width: 300px;
-  height: 225px;
-  object-fit: contain;  
-}
-
-.places {
-  width: calc(100% - 96px);
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: center;
-  color: #fff;
-}
-
-.place {
-  width: 100%;
-  max-width: 984px;  
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-template-rows: repeat(2, min-content);
-  grid-gap: 48px 32px;
-  grid-auto-flow: row;
-  grid-auto-rows: minmax(min-content, max-content);  
-  margin-bottom: 80px;
-}
-
-.place:last-child {
-  margin-bottom: 0;
-}
-
-.place__title {
-  margin: 0;
-  font-size: 4.5em;
-  line-height: 1;
-  font-weight: bold;
-}
-
-.place__image {
-  grid-column: 1;
-  grid-row: 2/3;
-  max-width: 440px;
-  max-height: 440px;
-  margin: 0;  
-}
-
-.place__website {
-  display: flex;  
-  flex-direction: column;
-  justify-content: end;
-}
-
-.place__website_url-heading {
-  margin: 0;
-  padding-bottom: 12px;
-  font-size: .7em;
-  line-height: .9;
-  color: #aaa;
-}
-
-.place__website_link {
-  color: #fff;
-  font-size: 1.1em;
-  line-height: .8;  
-}
-
-.place__website_link:hover {
-  text-decoration: underline;
-}
-
-.place__paragraph {
-  font-size: 1.1em; 
-  line-height: 1.6;
-  margin: 0;  
-}  
-
-.place__paragraph:last-child {
-  margin-top: 27px;
-}
-
-.cover {
-  width: 100%;
-  max-width: 1184px;
-  margin: 79px auto 105px;
-  position: relative;   
-}
-
-.cover__background {
-  min-height: 640px;
-  background-image: url(../images/cover-trains.jpg);
-  background-repeat: no-repeat;
-  background-size: contain; 
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center; 
-  text-decoration: none;   
-}
-
-.cover__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #2a2c2f;
-  opacity: .2;
-  z-index: 1;
-}
-
-.cover__overlay:hover {
-  opacity: .5;
-  transition: opacity .4s;
-}
-
-.cover__title {
-  color: #fff;
-  text-decoration: none;  
-  font-size: 4.5em;
-  font-weight: bold;
-  line-height: 1;
-  text-align: center;
-  margin: 0 auto 32px;
-  width: 560px;
-  z-index: 2;
-}
-
-.cover__subtitle {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.1em;
-  line-height: 1.2;
-  text-align: center;
-  margin: 0 auto;
-  width: 360px;
-  z-index: 2;  
-}
-
-.footer {
-  width: calc(100% - 96px);
-  margin: 92px auto 24px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  color: #fff;  
-}
-
-.footer__link {
-  font-size: 1em;
-  line-height: 1.1;
-  color: #fff;
-  text-decoration: none;
-  margin-right: 18px;
-}
-
-.footer__copyright {
-  margin-left: auto;
-}
-
-@media screen and (min-width: 1056px) {
-  .lead {
-    width: calc(100% - 296px);
-    
-  }
-
-  .intro {
-    margin-left: 148px;
-  }
-
-  .photo-grid {
-    width: calc(100% - 96px);
-  }
-
-  .photo-grid__item {
-    width: 284px;
-    height: 213px;
-  }
-
-  .place {    
-    grid-template-columns: repeat(2, 1fr);    
-  }
-
-  .place__image {
-    width: 460px;
-    height: 460px;
-  } 
-  
-  .cover {
-    margin: 92px auto;
-  }
-  
-  .cover__background {
-    height: 740px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .lead {
-    max-width: 100%;
-    margin: 48px 0 0;
-  }
-
-  .intro {
-    margin: 88px 24px;
-  }
-  
-  .photo-grid {
-    width: calc(100% - 48px);
-    grid-gap: 16px;
-  }
-
-  .photo-grid__item {
-    width: 352px;
-    height: 264px;
-  }
-
-  .places {
-    width: calc(100% - 48px);
-    margin: 88px auto 90px;
-  }
-
-  .place__image {
-    width: 340px;
-    height: 340px;
-  }
-
-  .cover__background {
-    min-height: 480px;    
-  }
-
-  .footer {
-    width: calc(100% - 48px);
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .header {
-    max-width: calc(100% - 32px);    
-    margin: 16px auto 48px;
-  }
-
-  .lead {
-    max-width: calc(100% - 4px);
-
-  }
-
-  .lead__title {
-    width: 288px;
-    font-size: 40px;
-  }
-
-  .lead__subtitle {
-    width: 288px;
-    font-size: 16px;
-    line-height: 20px;
-  }
-
-  .intro {
-    width: calc(100% - 32px);
-    margin: 64px auto;
-  }
-
-  .intro__title {
-    font-size: 32px;
-    line-height: 1;
-  }
-
-  .photo-grid {
-    width: calc(100% - 32px);
-    grid-gap: 12px;
-  }
-
-  .photo-grid__item {
-    width: 288px;
-    height: 216px;
-  }
-
-  .places {
-    width: 100%;
-  }
-
-  .place {   
-    grid-gap: 32px;  
-  }
-
-  .place__title {
-    font-size: 32px;
-    line-height: 1;
-    margin: 0 16px;
-    grid-row: 1;
-  }
-
-  .place__website {
-    margin: 0 16px;
-    grid-row: 2;
-  }
-
-  .place__image {
-    width: 320px;
-    height: 320px;
-    grid-row: 3;    
-  }
-
-  .place__paragraph {
-    margin: 32px 16px 50px;
-  }
-
-  .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    width: 288px;
-  }
-
-  .cover__subtitle {
-    font-size: 14px;
-    line-height: 16px;
-    width: 288px;    
-  }
-
-  .cover {
-    margin: 16px 0 64px;
-  }
-
-  .cover__background {
-    min-height: 200px;
-    
-  }
-
-  .footer {
-    min-width: 186px;
-    min-height: 310px;
-    margin: 0 16px 24px;
-    flex-direction: column;
-    align-content: space-between;
-  }
-
-  .footer__link {
-    font-size: 24px;
-    line-height: 1;
-  }
-
-  .footer__copyright {
-    font-size: 14px;
-    line-height: 1;
-    margin: 0;
-  }
-}
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__logo-link/header__logo-link.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__website/_link/place__website_url-heading.css);
+@import url(../blocks/place/__website/_url-heading/place__website_link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/*div, a, article, h1, h2, img, section {
+  border: 1px solid red;  
+}*/
