--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-  margin-left: auto;
+  margin: 0 0 0 auto;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
