--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,9 @@
 .cover__background {
   width: 100%;
-  height: 640px;
+  min-height: 640px;
   background-image: url(../../../images/cover-trains.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
@@ -14,21 +14,21 @@
 
 @media screen and (min-width: 1056px) {
   .cover__background {
-    height: 740px;
-    width: 1184px;
+    min-height: 740px;
+    max-width: 1184px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover__background {
     width: 100%;
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .cover__background {
-    width: 100%;
     min-height: 200px;
+    width: 100%;
   }
 }
