--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,7 +2,7 @@
   color: #fff;
   text-decoration: none;
   font-size: 4.5em;
-  font-weight: bold;
+  font-weight: 900;
   line-height: 1;
   text-align: center;
   margin: 0 auto 32px;
