--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,11 @@
 .footer__copyright {
-  margin: 0 0 0 auto;
+  margin: 0 auto 24px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__copyright {
     font-size: 14px;
     line-height: 1;
-    margin: 0;
+    margin: 0 auto 24px 16px;
   }
 }
