--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,12 +3,16 @@
   line-height: 1.1;
   color: #fff;
   text-decoration: none;
-  margin-right: 18px;
+  margin-right: 18px;  
+}
+
+.footer__link:hover {
+  opacity: .8;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__link {
     font-size: 24px;
-    line-height: 1;
+    line-height: 1;    
   }
 }  
