--- a/blocks/header/__lang-link/_active/header__lang-link_active_disabled.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active_disabled.css
@@ -3,3 +3,10 @@
     height: 28px;
     text-decoration: none;    
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__lang-link {
+      width: 22px;
+      height: 20px;
+    }
+  }
