--- a/blocks/header/__lang-link/_active/header__lang-link_active_enabled.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active_enabled.css
@@ -2,3 +2,10 @@
     width: 30px;   
     height: 28px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__lang-link {
+      width: 22px;
+      height: 20px;
+    }
+  }
