--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -4,3 +4,9 @@
     justify-content: space-between;
     box-sizing: border-box;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__lang-links {
+      min-width: 62px;      
+    }
+  }
