--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,13 @@
   display: flex;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    max-width: calc(100% - 48px);
+  }
+  
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     max-width: calc(100% - 32px);
