--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,8 @@
 .intro__list {
-  margin-top: 33px;
-  margin-bottom: 0;
+  margin: 0;
   list-style: none;
   padding: 0;
-  font-size: .7em;
-  line-height: 1.6;
+  font-size: 12px;
+  line-height: 18px;
   font-weight: bold;
 }
