--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
-  font-size: 1em;
+  font-size: 16px;
   line-height: 1.6;
   font-weight: normal;
-  margin-top: 40px;
+  margin: 40px auto 33px;
 }
