--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,13 @@
 .intro__title {
   margin: 0;
   font-size: 3.4em;
-  font-weight: bold;
+  font-weight: 900;
   line-height: 1;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .intro__title {
     font-size: 32px;
-    line-height: 1;
+    line-height: 1.1;
   }
 }
