--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,3 +4,15 @@
   letter-spacing: 1.5px;
   margin-top: 8px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .lead__caption {
+    margin: 8px auto 0 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead__caption{
+    margin-left: 24px;
+  }
+}
