--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,6 +12,6 @@
     max-width: 288px;
     font-size: 16px;
     line-height: 20px;
-    margin: 16px 0 40px;
+    margin: 16px auto 40px;
   }
 }
