--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,8 @@
 .lead__title {
   max-width: 720px;
   font-size: 6em;
-  font-weight: bold;
-  line-height: 1;
+  font-weight: 900;
+  line-height: 1.05;
   text-align: center;
   margin: auto;
 }
