--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,11 +2,12 @@
   margin: 92px auto;
   width: calc(100% - 96px);
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
   grid-template-rows: 1fr;
   gap: 14px;
   grid-auto-flow: row;
-  align-items: center;
+  align-items: center;  
+  overflow: hidden;
 }
 
 @media screen and (min-width: 1056px) {
@@ -26,7 +27,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .photo-grid {
-    width: calc(100% - 32px);
+    width: calc(100% - 32px);   
     gap: 12px;
+    margin: 64px auto;
   }
 }
