--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,14 @@
 .place__website_url-heading {
   margin: 0;
   padding-bottom: 12px;
-  font-size: .7em;
-  line-height: .9;
+  font-size: 12px;
+  line-height: 20.4px;
   color: #aaa;
+  letter-spacing: 2px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .place__website_url-heading {
+    line-height: 12px;
+  }
 }
