--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -13,7 +13,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    margin: 90px 0 88px;
+    margin: 0 0 88px;
   }
 }
 
