--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,14 @@
 .footer__copyright {
-  margin: 0 auto 24px;
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer__copyright {
+    margin: 0 24px 24px auto;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
