--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,9 +1,16 @@
 .footer__links {
-  margin: 0 auto 24px;
+  margin: 0 auto 24px 48px;
   list-style-type: none;
   padding: 0;
   display: flex;
   flex-direction: row;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer__links {
+    margin-left: 24px;
+    margin-bottom: 24px;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
