--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,7 +8,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer {
-    width: calc(100% - 48px);
+    width: 100%;
   }
 }
 
