--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,8 @@
 .intro__title {
   margin: 0;
-  font-size: 3.4em;
+  font-size: 54px;
   font-weight: 900;
-  line-height: 1;
+  line-height: 58px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
