--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,6 +14,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro {
+    max-width: 720px;
     margin: 88px 24px;
   }
 }
