--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,9 +2,9 @@
   margin: 32px auto 56px;
   max-width: 640px;
   text-align: center;
-  font-size: 1.9em;
+  font-size: 30px;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 36px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
