--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
   width: calc(100% - 96px);
-  margin: 48px auto 0;
+  margin: 0 auto;
   color: #fff;
   display: flex;
   flex-direction: column;
