--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,7 +13,15 @@
   .place__paragraph {
     margin: 0 16px 25px;
     font-size: 16px;
-    line-height: 26.08px;
+    line-height: 26px;
     grid-row: 4;
   }
 } 
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    list-style: 26px;
+
+  }
+}
