--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,8 @@
 
 @media screen and (min-width: 768px) and (max-width: 1000px) {
   .place__title {
-    font-size: 42px;        
+    font-size: 42px; 
+    line-height: 46px;
   }  
 }
 
