--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -24,6 +24,7 @@
 @media screen and (min-width: 768px) and (max-width: 1000px) {
   .place {
     gap: 48px 28px;
+    margin-bottom: 73px;
   }
 }
 
