--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -12,7 +12,7 @@
 @media screen and (min-width: 768px) and (max-width: 1000px) {
   .places {
     width: calc(100% - 48px);
-    margin: 88px auto 90px;
+    margin: 0 auto 90px;
   }
 }
 
