--- a/pages/index.css
+++ b/pages/index.css
@@ -38,6 +38,6 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
-div, a, article, h1, h2, img, section {
+/*div, a, article, h1, h2, img, section {
   border: 1px solid red;  
-}
+}*/
