ПР3__КР1__03.01_ОЕд

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,9 +1,9 @@
 .cover__title {
   color: #fff;
   text-decoration: none;
-  font-size: 4.5em;
+  font-size: 72px;
   font-weight: 900;
-  line-height: 1;
+  line-height: 76px;
   text-align: center;
   margin: 0 auto 32px;
   max-width: 560px;
