--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,7 @@
 .place__website_link {
   color: #fff;
-  font-size: 1.1em;
-  line-height: .8;
+  font-size: 18px;
+  line-height: 22px;
   margin: 0;
 }
   
