--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -10,6 +10,26 @@
   justify-content: center;
   align-content: center;
   text-decoration: none;
+  box-sizing: border-box;
+  position: relative;
+  z-index: 0;
+}
+
+.cover__background::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #2a2c2f;
+  opacity: .3;
+  z-index: -1;
+  transition: opacity .3s;
+}
+
+.cover__background:hover::before {
+  opacity: .8;
 }
 
 @media screen and (min-width: 1056px) {
