--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,8 @@
 .cover__subtitle {
   color: #fff;
   text-decoration: none;
-  font-size: 1.1em;
-  line-height: 1.2;
+  font-size: 18px;
+  line-height: 22px;
   text-align: center;
   margin: 0 auto;
   max-width: 360px;
