--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,8 @@
 .lead__title {
   max-width: 720px;
-  font-size: 6em;
+  font-size: 96px;
   font-weight: 900;
-  line-height: 1.05;
+  line-height: 100px;
   text-align: center;
   margin: auto;
 }
@@ -11,5 +11,6 @@
   .lead__title {
     max-width: 288px;
     font-size: 40px;
+    line-height: 44px;
   }
 }
