--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,20 +1,21 @@
 .place__title {
   margin: 0;
-  font-size: 4.5em;
-  line-height: 1.09;
+  font-size: 72px;
+  line-height: 76px;
   font-weight: 900;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1000px) {
   .place__title {
-    font-size: 42px; 
+    font-size: 42px;
     line-height: 46px;
   }  
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .place__title {
-    font-size: 32px;    
+    font-size: 32px;
+    line-height: 35px;
     margin: 0 16px;
     grid-row: 1;
   }
